--- a/PantherEngine/PantherEngine.vcxproj
+++ b/PantherEngine/PantherEngine.vcxproj
@@ -138,6 +138,7 @@
     <ClInclude Include="src\DX12Renderer.h" />
     <ClInclude Include="src\DX12RenderTarget.h" />
     <ClInclude Include="src\DX12Sampler.h" />
+    <ClInclude Include="src\DX12Shader.h" />
     <ClInclude Include="src\DX12Texture.h" />
     <ClInclude Include="src\Exceptions.h" />
     <ClInclude Include="src\Input.h" />
@@ -150,6 +151,7 @@
     <ClInclude Include="src\RenderTarget.h" />
     <ClInclude Include="src\Sampler.h" />
     <ClInclude Include="src\Scene.h" />
+    <ClInclude Include="src\Shader.h" />
     <ClInclude Include="src\Space.h" />
     <ClInclude Include="src\SwapChain.h" />
     <ClInclude Include="src\Texture.h" />
@@ -175,6 +177,7 @@
     <ClCompile Include="src\DX12Renderer.cpp" />
     <ClCompile Include="src\DX12RenderTarget.cpp" />
     <ClCompile Include="src\DX12Sampler.cpp" />
+    <ClCompile Include="src\DX12Shader.cpp" />
     <ClCompile Include="src\DX12Texture.cpp" />
     <ClCompile Include="src\Exceptions.cpp" />
     <ClCompile Include="src\Input.cpp" />
