--- a/PantherEngine/PantherEngine.vcxproj.filters
+++ b/PantherEngine/PantherEngine.vcxproj.filters
@@ -144,6 +144,12 @@
     <ClInclude Include="src\Input.h">
       <Filter>Core</Filter>
     </ClInclude>
+    <ClInclude Include="src\Shader.h">
+      <Filter>Rendering\Common</Filter>
+    </ClInclude>
+    <ClInclude Include="src\DX12Shader.h">
+      <Filter>Rendering\DirectX12</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\DX12Buffer.cpp">
@@ -242,6 +248,7 @@
     <ClCompile Include="src\Input.cpp">
       <Filter>Core</Filter>
     </ClCompile>
+    <ClCompile Include="src\DX12Shader.cpp" />
   </ItemGroup>
   <ItemGroup>
     <None Include="rsc\shaders\lighting.hlsl">
