--- a/PantherEngine/PantherEngine.vcxproj.filters
+++ b/PantherEngine/PantherEngine.vcxproj.filters
@@ -262,6 +262,9 @@
     <None Include="rsc\shaders\water.hlsl">
       <Filter>Resources\Shaders</Filter>
     </None>
+    <None Include="rsc\shaders\ConstantBuffers.hlsli">
+      <Filter>Resources\Shaders</Filter>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="PantherEngine.rc">
