--- a/PantherEngine/PantherEngine.vcxproj
+++ b/PantherEngine/PantherEngine.vcxproj
@@ -145,6 +145,7 @@
     <ClInclude Include="src\Keys.h" />
     <ClInclude Include="src\Material.h" />
     <ClInclude Include="src\Mesh.h" />
+    <ClInclude Include="src\MeshComponent.h" />
     <ClInclude Include="src\Output.h" />
     <ClInclude Include="src\Renderer.h" />
     <ClInclude Include="src\RendererFactory.h" />
@@ -161,6 +162,7 @@
     <ClInclude Include="src\Window.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="src\Component.cpp" />
     <ClCompile Include="src\Entity.cpp" />
     <ClCompile Include="src\Adapter.cpp" />
     <ClCompile Include="src\Application.cpp" />
@@ -183,6 +185,7 @@
     <ClCompile Include="src\Input.cpp" />
     <ClCompile Include="src\main.cpp" />
     <ClCompile Include="src\Mesh.cpp" />
+    <ClCompile Include="src\MeshComponent.cpp" />
     <ClCompile Include="src\Output.cpp" />
     <ClCompile Include="src\Renderer.cpp" />
     <ClCompile Include="src\RendererFactory.cpp" />
